<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/favorite" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/photo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/iv_detail"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/iv_detail">

                <TextView
                    style="@style/TvTittle"
                    android:id="@+id/tv_titleDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvRatingDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:drawableRightCompat="@drawable/ic_baseline_star_rate_24" />
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvDateDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvDurationDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvSeasonsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/iv_detail"
                android:layout_marginTop="26dp">

                <TextView
                    style="@style/TvTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvGenreDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
                <TextView
                    style="@style/TvTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/descriptions"/>
                <TextView
                    style="@style/TvDetail"
                    android:id="@+id/tvDescriptionsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>